--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     restart: always # Selalu restart meskipun dihentikan atau berhenti dengan sendirinya
 
   item-app:
-    image: ghcr.io/arduinocraft/a433-microservices:item-app:v1 # Template (image) yang dibangun secara manual dengan Dockerfile dan didapat dari unggahan (push) ke GHCR
+    image: ghcr.io/arduinocraft/a433-microservices/item-app:v1 # Template (image) yang dibangun secara manual dengan Dockerfile dan didapat dari unggahan (push) ke GHCR
     container_name: item-app # Penanda nama kontainer aplikasi Node
     ports:
       - "80:8080"  # Mem forward traffic dari port container 8080 ke host 80
